--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -11,10 +11,36 @@ header {
   justify-content: space-between;
   align-items: center;
   .header__left {
+    display: flex;
     margin: 20px;
     img {
-      width: 25%;
+      display: inline;
+      width: 100%;
       object-fit: cover;
+    }
+    span {
+      font-size: 18px;
+      font-weight: 800;
+      margin: 20px;
+      color: #6c679c;
+      position: relative;
+      &::before {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 3px;
+        bottom: -20px;
+        left: 0;
+        background-color: #080024;
+        transform: scaleX(0);
+        transition: transform 0.3s;
+      }
+      &:hover {
+        &::before {
+          transform: scaleX(1);
+        }
+        color: #a75d12;
+      }
     }
   }
   .header__right {
@@ -42,7 +68,7 @@ header {
           &::before {
             transform: scaleX(1);
           }
-          color: #a75d12;
+          color: #b0d6e0;
         }
       }
 
