config route and replace a tag to NavLink

--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -18,7 +18,8 @@ header {
       width: 100%;
       object-fit: cover;
     }
-    span {
+    a {
+      text-decoration: none;
       font-size: 18px;
       font-weight: 800;
       margin: 20px;
