--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,4 +5,6 @@
 // component
 @import "./components/header";
 @import "./components/home";
+@import "./components/filmItem";
+@import "./components//detail";
 @import "./components/footer";
