--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,5 +6,6 @@
 @import "./components/header";
 @import "./components/home";
 @import "./components/filmItem";
+@import "./components/slickCarousel";
 @import "./components//detail";
 @import "./components/footer";
