adding Suspense and lazyload for project

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,6 +5,7 @@
 // component
 @import "./components/header";
 @import "./components/home";
+@import "./components//loading";
 @import "./components/filmItem";
 @import "./components/slickCarousel";
 @import "./components//detail";
