update tab movie by cinema

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -10,3 +10,4 @@
 @import "./components/slickCarousel";
 @import "./components//detail";
 @import "./components/footer";
+@import './components/movies';
