done feature register

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,9 +5,10 @@
 // component
 @import "./components/header";
 @import "./components/home";
-@import "./components//loading";
-@import "./components/filmItem";
+@import "./components/loading";
 @import "./components/slickCarousel";
-@import "./components//detail";
+@import "./components/filmItem";
+@import "./components/movies";
+@import "./components/detail";
+@import "./components/register";
 @import "./components/footer";
-@import './components/movies';
